[package]
name = "cargo-vet"
version = "0.1.0"
edition = "2021"
authors = ["Bobby Holley <bobbyholley@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/bholley/cargo-vet"
homepage = "https://bholley.net/cargo-vet"
description = "Supply-chain security for Rust"
exclude = [
  "book/*",
  "src/snapshots/*",
  "src/tests/",
  "tests/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.14.2"
clap = { version = "3.2.6", features = ["derive"] }
clap-cargo = "0.8.0"
console = "0.15.0"
crates-index = { version = "0.18.8", default-features = false }
dirs = "4.0.0"
filetime = "0.2.16"
flate2 = { version = "1.0.3", default-features = false, features = ["zlib"] }
futures-util = { version = "0.3.21", default-features = false, features = ["std"] }
home = "0.5.3"
libc = "0.2"
nom = "7.1.1"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
serde = "1.0.136"
serde_json = "1.0.79"
tar = { version = "0.4.26", default-features = false }
tempfile = "3.3.0"
textwrap = { version = "0.15", default-features = false }
toml_edit = { version = "0.14.4", features = ["serde"] }
tokio = { version = "1.12.0", features = ["fs", "macros", "process", "rt-multi-thread"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = "0.3.11"
miette = { version = "4.7.1", features = ["fancy"] }
thiserror = "1.0.31"
url = "2.2.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
  "minwindef",
  "winerror",
  "fileapi",
  "minwinbase",
]

[dev-dependencies]
insta = "1.13.0"
lazy_static = "1.4.0"
