[package]
name = "cargo-vet"
version = "0.10.1"
edition = "2021"
authors = ["Bobby Holley <bobbyholley@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/mozilla/cargo-vet"
homepage = "https://mozilla.github.io/cargo-vet/"
description = "Supply-chain security for Rust"
rust-version = "1.70"
exclude = [
  "book/*",
  "src/snapshots/*",
  "src/tests/",
  "tests/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-stream = "3"
bytes = "1.1.0"
cargo_metadata = "0.15.2"
chrono = { version = "0.4.23", default-features = false, features = ["alloc", "std", "serde"] }
clap = { version = "3.2.6", features = ["derive"] }
clap-cargo = "0.9.1"
console = "0.15.0"
crates-index = { version = "0.18.8", default-features = false }
dirs = "4.0.0"
filetime = "0.2.16"
flate2 = { version = "1.0.3", default-features = false, features = ["zlib"] }
futures-util = { version = "0.3.21", default-features = false, features = ["std"] }
home = "0.5.3"
indicatif = "0.17.0"
lazy_static = "1.4.0"
libc = "0.2"
nom = "7.1.1"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
serde = "1.0.136"
serde_json = "1.0.82"
similar = "2.2.0"
tar = { version = "0.4.26", default-features = false }
tempfile = "3.3.0"
textwrap = { version = "0.15", default-features = false }
toml_edit = { version = "0.14.4", features = ["serde"] }
tokio = { version = "1.20.1", features = ["fs", "macros", "process", "rt-multi-thread"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = "0.3.11"
miette = { version = "5.9.0", features = ["fancy"] }
thiserror = "1.0.31"
url = "2.2.2"
toml = "0.5.9"
open = "3.0.2"
cargo-config2 = "0.1.27"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
  "minwindef",
  "winerror",
  "fileapi",
  "minwinbase",
]

[dev-dependencies]
insta = "1.16.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[workspace]
exclude = ["tests/test-project"]
